apps/examples/p1-internal-http/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p1-whoami
  namespace: scrap-examples
spec:
  selector:
    app: p1-whoami
  ports:
    - name: http
      port: 80
      targetPort: http
